# weather-cpp

./: .env.template  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  main.cpp
include/: weather.hpp
src/: weather.cpp
test/: CMakeLists.txt  weather_test.cpp
